# magic

./: AUTHORS  ChangeLog  Makefile.am  README  configure.ac
man/: Makefile.am  magic.1
src/: Makefile.am  magic.c
